--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,10 +50,12 @@ h2{font-family: Georgia, 'Times New Roman', Times, serif;
     border-width:1px;
     border-color:grey;
     padding: 10px;
-    width:650px
+    width:650px;
+    overflow:auto;
+    position:relative;
 }
 .links{clear:both;
-    position: absolute;
+    position: fixed;
     right: 50px;  
     top:250px;  
     font-size:20px;
@@ -69,9 +71,16 @@ h2{font-family: Georgia, 'Times New Roman', Times, serif;
 #git {height:40px; width:40;}
 #linkedin{height:40px; width:40px;}
 #fullstack{height:40px; width:40px;}
+#abstract1{padding:20px;
+position: relative}
+#abstract2{padding:20px;}
+#abstract3{padding:20px;}
+#abstract4{padding:20px;}
+#abstract5{padding:20px;}
+
 
 footer{clear:both;
-    position: absolute;
+    position: relative;
     height:50px;
     text-align:center;
     font-size:20px;
@@ -86,4 +95,56 @@ footer{clear:both;
 }
 h2 h1{font-family: Georgia, 'Times New Roman', Times, serif;
 }
-.form1{}
+.box1{font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 30px;
+    width:200px;
+    height:60px;
+    position:absolute;
+    top:290px;
+    left:30px;
+    Background-color:#4aaaa5;
+    color:white;
+    text-align: center;
+}
+.box2{font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 30px;
+    width:200px;
+    height:60px;
+    position:absolute;
+    top:290px;
+    right:195px;
+    Background-color:#4aaaa5;
+    color:white;
+    text-align: center;
+}
+.box3{font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 30px;
+    width:200px;
+    height:60px;
+    position:absolute;
+    top:530px;
+    left:30px;
+    Background-color:#4aaaa5;
+    color:white;
+    text-align: center;
+}.box4{font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 25px;
+    width:200px;
+    height:60px;
+    position:absolute;
+    top:530px;
+    right:195px;
+    Background-color:#4aaaa5;
+    color:white;
+    text-align: center;
+}.box5{font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 25px;
+    width:200px;
+    height:60px;
+    position:absolute;
+    top:790px;
+    left:30px;
+    Background-color:#4aaaa5;
+    color:white;
+    text-align: center;
+}
