--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,7 @@ h2{font-family: Georgia, 'Times New Roman', Times, serif;
     border-color:grey;
     padding: 10px;
 }
-#git {height:40px; width:40;}
+#git {height:40px; width:40px;}
 #linkedin{height:40px; width:40px;}
 #fullstack{height:40px; width:40px;}
 #abstract1{padding:20px;
